@@ -4,15 +4,14 @@ import data.DataGenerator;
 import data.DomainGenerator;
 import framework.ProcessExecutor;
 import framework.QueryExecutor;
-
 import framework.context.BenchmarkContext;
 import framework.context.ConnectionContext;
 import java.io.BufferedWriter;
+import java.io.File;
 import java.nio.charset.Charset;
 import java.nio.file.Files;
 import java.nio.file.Paths;
 import java.util.List;
-
 import org.asqldb.util.TimerUtil;
 import util.IO;
 import util.Pair;
@@ -29,7 +28,7 @@ public class SciQLQueryExecutor extends QueryExecutor {
     private final int noOfDimensions;
 
     public SciQLQueryExecutor(ConnectionContext context, SciQLSystemController systemController,
-                              BenchmarkContext benchContext, int noOfDimensions) {
+            BenchmarkContext benchContext, int noOfDimensions) {
         super(context);
         this.domainGenerator = new DomainGenerator(noOfDimensions);
         this.systemController = systemController;
@@ -44,7 +43,7 @@ public class SciQLQueryExecutor extends QueryExecutor {
         SciQLConnection.executeQuery(query);
         long result = TimerUtil.getElapsedMilli("sciql query");
         TimerUtil.clearTimers();
-        System.out.println("time: " + result + " ms");
+//        System.out.println("time: " + result + " ms");
         return result;
     }
 
@@ -69,9 +68,16 @@ public class SciQLQueryExecutor extends QueryExecutor {
     @Override
     public void createCollection() throws Exception {
 
+        String collName = benchContext.getCollName1();
+        if (SciQLConnection.tableExists(collName)) {
+            System.out.println("Collection " + collName + " found, not reingesting.");
+            return;
+        }
+        System.out.println("--------------------------------------------------------------------------");
+        System.out.println("Creating collection " + collName);
+
         List<Pair<Long, Long>> domainBoundaries = domainGenerator.getDomainBoundaries(benchContext.getCollSize());
         long fileSize = domainGenerator.getFileSize(domainBoundaries);
-        String collName = benchContext.getCollName1();
 
         dataGenerator = new DataGenerator(fileSize);
         String filePath = dataGenerator.getFilePath();
@@ -82,7 +88,7 @@ public class SciQLQueryExecutor extends QueryExecutor {
         createArrayQuery.append(" (");
 
         for (int i = 0; i < domainBoundaries.size(); i++) {
-            createArrayQuery.append(" axis");
+            createArrayQuery.append("axis");
             createArrayQuery.append(i);
             createArrayQuery.append(" INT DIMENSION [");
             Pair<Long, Long> axisDomain = domainBoundaries.get(i);
@@ -90,143 +96,138 @@ public class SciQLQueryExecutor extends QueryExecutor {
             createArrayQuery.append(":1:");
             createArrayQuery.append(axisDomain.getSecond());
             createArrayQuery.append("]");
-            createArrayQuery.append(",");
+            createArrayQuery.append(", ");
         }
 
         createArrayQuery.append(" v TINYINT");
         createArrayQuery.append(')');
 
-        executeTimedQuery(createArrayQuery.toString());
+        executeTimedQueryUpdate(createArrayQuery.toString());
 
-        byte[] data = IO.readFile(filePath);
-        String outFilePath = filePath + ".sql";
+        String outFilePath = IO.concatPaths(benchContext.getDataDir(), collName + ".sql");
+        File outFile = new File(outFilePath);
+        if (!outFile.exists()) {
+            System.out.print("generating data... ");
+            byte[] data = IO.readFile(filePath);
 
-        try (BufferedWriter writer = Files.newBufferedWriter(Paths.get(outFilePath), Charset.defaultCharset())) {
-            writer.write("COPY " + fileSize + " RECORDS INTO \"sys\".\"" + collName + "\" FROM stdin USING DELIMITERS '\t','\n','\"';");
-            writer.newLine();
-            if (noOfDimensions == 1) {
-                Pair<Long, Long> d1 = domainBoundaries.get(0);
-                int j = 0;
-                for (long i1 = d1.getFirst(); i1 < d1.getSecond(); i1++, j++) {
-                    writer.write((int) i1);
-                    writer.write(" ");
-                    writer.write(data[j]);
-                    writer.newLine();
-                }
-            } else if (noOfDimensions == 2) {
-                Pair<Long, Long> d1 = domainBoundaries.get(0);
-                Pair<Long, Long> d2 = domainBoundaries.get(1);
-                int j = 0;
-                for (long i1 = d1.getFirst(); i1 < d1.getSecond(); i1++) {
-                    for (long i2 = d2.getFirst(); i2 < d2.getSecond(); i2++) {
-                        writer.write((int) i1);
-                        writer.write(" ");
-                        writer.write((int) i2);
-                        writer.write(" ");
-                        writer.write(data[j++]);
+            try (BufferedWriter writer = Files.newBufferedWriter(Paths.get(outFilePath), Charset.defaultCharset())) {
+                writer.write("COPY " + fileSize + " RECORDS INTO \"sys\".\"" + collName + "\" FROM stdin USING DELIMITERS '\t','\\n','\"';");
+                writer.newLine();
+                if (noOfDimensions == 1) {
+                    Pair<Long, Long> d1 = domainBoundaries.get(0);
+                    int j = 0;
+                    for (long i1 = d1.getFirst(); i1 <= d1.getSecond(); i1++) {
+                        StringBuilder b = new StringBuilder();
+                        b.append(i1).append(' ')
+                                .append(data[j++]);
+                        writer.write(b.toString());
                         writer.newLine();
                     }
-                }
-            } else if (noOfDimensions == 3) {
-                Pair<Long, Long> d1 = domainBoundaries.get(0);
-                Pair<Long, Long> d2 = domainBoundaries.get(1);
-                Pair<Long, Long> d3 = domainBoundaries.get(2);
-                int j = 0;
-                for (long i1 = d1.getFirst(); i1 < d1.getSecond(); i1++) {
-                    for (long i2 = d2.getFirst(); i2 < d2.getSecond(); i2++) {
-                        for (long i3 = d3.getFirst(); i3 < d3.getSecond(); i3++) {
-                            writer.write((int) i1);
-                            writer.write(" ");
-                            writer.write((int) i2);
-                            writer.write(" ");
-                            writer.write((int) i3);
-                            writer.write(" ");
-                            writer.write(data[j++]);
+                } else if (noOfDimensions == 2) {
+                    Pair<Long, Long> d1 = domainBoundaries.get(0);
+                    Pair<Long, Long> d2 = domainBoundaries.get(1);
+                    int j = 0;
+                    for (long i1 = d1.getFirst(); i1 <= d1.getSecond(); i1++) {
+                        for (long i2 = d2.getFirst(); i2 <= d2.getSecond(); i2++) {
+                            StringBuilder b = new StringBuilder();
+                            b.append(i1).append(' ')
+                                    .append(i2).append(' ')
+                                    .append(data[j++]);
+                            writer.write(b.toString());
                             writer.newLine();
                         }
                     }
-                }
-            } else if (noOfDimensions == 4) {
-                Pair<Long, Long> d1 = domainBoundaries.get(0);
-                Pair<Long, Long> d2 = domainBoundaries.get(1);
-                Pair<Long, Long> d3 = domainBoundaries.get(2);
-                Pair<Long, Long> d4 = domainBoundaries.get(3);
-                int j = 0;
-                for (long i1 = d1.getFirst(); i1 < d1.getSecond(); i1++) {
-                    for (long i2 = d2.getFirst(); i2 < d2.getSecond(); i2++) {
-                        for (long i3 = d3.getFirst(); i3 < d3.getSecond(); i3++) {
-                            for (long i4 = d4.getFirst(); i4 < d4.getSecond(); i4++) {
-                                writer.write((int) i1);
-                                writer.write(" ");
-                                writer.write((int) i2);
-                                writer.write(" ");
-                                writer.write((int) i3);
-                                writer.write(" ");
-                                writer.write((int) i4);
-                                writer.write(" ");
-                                writer.write(data[j++]);
+                } else if (noOfDimensions == 3) {
+                    Pair<Long, Long> d1 = domainBoundaries.get(0);
+                    Pair<Long, Long> d2 = domainBoundaries.get(1);
+                    Pair<Long, Long> d3 = domainBoundaries.get(2);
+                    int j = 0;
+                    for (long i1 = d1.getFirst(); i1 <= d1.getSecond(); i1++) {
+                        for (long i2 = d2.getFirst(); i2 <= d2.getSecond(); i2++) {
+                            for (long i3 = d3.getFirst(); i3 <= d3.getSecond(); i3++) {
+                                StringBuilder b = new StringBuilder();
+                                b.append(i1).append(' ')
+                                        .append(i2).append(' ')
+                                        .append(i3).append(' ')
+                                        .append(data[j++]);
+                                writer.write(b.toString());
                                 writer.newLine();
                             }
                         }
                     }
-                }
-            } else if (noOfDimensions == 5) {
-                Pair<Long, Long> d1 = domainBoundaries.get(0);
-                Pair<Long, Long> d2 = domainBoundaries.get(1);
-                Pair<Long, Long> d3 = domainBoundaries.get(2);
-                Pair<Long, Long> d4 = domainBoundaries.get(3);
-                Pair<Long, Long> d5 = domainBoundaries.get(4);
-                int j = 0;
-                for (long i1 = d1.getFirst(); i1 < d1.getSecond(); i1++) {
-                    for (long i2 = d2.getFirst(); i2 < d2.getSecond(); i2++) {
-                        for (long i3 = d3.getFirst(); i3 < d3.getSecond(); i3++) {
-                            for (long i4 = d4.getFirst(); i4 < d4.getSecond(); i4++) {
-                                for (long i5 = d5.getFirst(); i5 < d5.getSecond(); i5++) {
-                                    writer.write((int) i1);
-                                    writer.write(" ");
-                                    writer.write((int) i2);
-                                    writer.write(" ");
-                                    writer.write((int) i3);
-                                    writer.write(" ");
-                                    writer.write((int) i4);
-                                    writer.write(" ");
-                                    writer.write((int) i5);
-                                    writer.write(" ");
-                                    writer.write(data[j++]);
+                } else if (noOfDimensions == 4) {
+                    Pair<Long, Long> d1 = domainBoundaries.get(0);
+                    Pair<Long, Long> d2 = domainBoundaries.get(1);
+                    Pair<Long, Long> d3 = domainBoundaries.get(2);
+                    Pair<Long, Long> d4 = domainBoundaries.get(3);
+                    int j = 0;
+                    for (long i1 = d1.getFirst(); i1 <= d1.getSecond(); i1++) {
+                        for (long i2 = d2.getFirst(); i2 <= d2.getSecond(); i2++) {
+                            for (long i3 = d3.getFirst(); i3 <= d3.getSecond(); i3++) {
+                                for (long i4 = d4.getFirst(); i4 <= d4.getSecond(); i4++) {
+                                    StringBuilder b = new StringBuilder();
+                                    b.append(i1).append(' ')
+                                            .append(i2).append(' ')
+                                            .append(i3).append(' ')
+                                            .append(i4).append(' ')
+                                            .append(data[j++]);
+                                    writer.write(b.toString());
                                     writer.newLine();
                                 }
                             }
                         }
                     }
-                }
-            } else if (noOfDimensions == 6) {
-                Pair<Long, Long> d1 = domainBoundaries.get(0);
-                Pair<Long, Long> d2 = domainBoundaries.get(1);
-                Pair<Long, Long> d3 = domainBoundaries.get(2);
-                Pair<Long, Long> d4 = domainBoundaries.get(3);
-                Pair<Long, Long> d5 = domainBoundaries.get(4);
-                Pair<Long, Long> d6 = domainBoundaries.get(5);
-                int j = 0;
-                for (long i1 = d1.getFirst(); i1 < d1.getSecond(); i1++) {
-                    for (long i2 = d2.getFirst(); i2 < d2.getSecond(); i2++) {
-                        for (long i3 = d3.getFirst(); i3 < d3.getSecond(); i3++) {
-                            for (long i4 = d4.getFirst(); i4 < d4.getSecond(); i4++) {
-                                for (long i5 = d5.getFirst(); i5 < d5.getSecond(); i5++) {
-                                    for (long i6 = d6.getFirst(); i6 < d6.getSecond(); i6++) {
-                                        writer.write((int) i1);
-                                        writer.write(" ");
-                                        writer.write((int) i2);
-                                        writer.write(" ");
-                                        writer.write((int) i3);
-                                        writer.write(" ");
-                                        writer.write((int) i4);
-                                        writer.write(" ");
-                                        writer.write((int) i5);
-                                        writer.write(" ");
-                                        writer.write((int) i6);
-                                        writer.write(" ");
-                                        writer.write(data[j++]);
+                } else if (noOfDimensions == 5) {
+                    Pair<Long, Long> d1 = domainBoundaries.get(0);
+                    Pair<Long, Long> d2 = domainBoundaries.get(1);
+                    Pair<Long, Long> d3 = domainBoundaries.get(2);
+                    Pair<Long, Long> d4 = domainBoundaries.get(3);
+                    Pair<Long, Long> d5 = domainBoundaries.get(4);
+                    int j = 0;
+                    for (long i1 = d1.getFirst(); i1 <= d1.getSecond(); i1++) {
+                        for (long i2 = d2.getFirst(); i2 <= d2.getSecond(); i2++) {
+                            for (long i3 = d3.getFirst(); i3 <= d3.getSecond(); i3++) {
+                                for (long i4 = d4.getFirst(); i4 <= d4.getSecond(); i4++) {
+                                    for (long i5 = d5.getFirst(); i5 <= d5.getSecond(); i5++) {
+                                        StringBuilder b = new StringBuilder();
+                                        b.append(i1).append(' ')
+                                                .append(i2).append(' ')
+                                                .append(i3).append(' ')
+                                                .append(i4).append(' ')
+                                                .append(i5).append(' ')
+                                                .append(data[j++]);
+                                        writer.write(b.toString());
                                         writer.newLine();
+                                    }
+                                }
+                            }
+                        }
+                    }
+                } else if (noOfDimensions == 6) {
+                    Pair<Long, Long> d1 = domainBoundaries.get(0);
+                    Pair<Long, Long> d2 = domainBoundaries.get(1);
+                    Pair<Long, Long> d3 = domainBoundaries.get(2);
+                    Pair<Long, Long> d4 = domainBoundaries.get(3);
+                    Pair<Long, Long> d5 = domainBoundaries.get(4);
+                    Pair<Long, Long> d6 = domainBoundaries.get(5);
+                    int j = 0;
+                    for (long i1 = d1.getFirst(); i1 <= d1.getSecond(); i1++) {
+                        for (long i2 = d2.getFirst(); i2 <= d2.getSecond(); i2++) {
+                            for (long i3 = d3.getFirst(); i3 <= d3.getSecond(); i3++) {
+                                for (long i4 = d4.getFirst(); i4 <= d4.getSecond(); i4++) {
+                                    for (long i5 = d5.getFirst(); i5 <= d5.getSecond(); i5++) {
+                                        for (long i6 = d6.getFirst(); i6 <= d6.getSecond(); i6++) {
+                                            StringBuilder b = new StringBuilder();
+                                            b.append(i1).append(' ')
+                                                    .append(i2).append(' ')
+                                                    .append(i3).append(' ')
+                                                    .append(i4).append(' ')
+                                                    .append(i5).append(' ')
+                                                    .append(i6).append(' ')
+                                                    .append(data[j++]);
+                                            writer.write(b.toString());
+                                            writer.newLine();
+                                        }
                                     }
                                 }
                             }
@@ -234,11 +235,12 @@ public class SciQLQueryExecutor extends QueryExecutor {
                     }
                 }
             }
+            System.out.println("ok.");
         }
-        
+
         TimerUtil.clearTimers();
         TimerUtil.startTimer("sciql query update");
-        ProcessExecutor executor = new ProcessExecutor("mclient", "-d", "benchmark");
+        ProcessExecutor executor = new ProcessExecutor(systemController.getMclientPath(), "-d", "benchmark");
         executor.executeRedirectInput(outFilePath);
         long result = TimerUtil.getElapsedMilli("sciql query update");
         TimerUtil.clearTimers();
@@ -247,6 +249,6 @@ public class SciQLQueryExecutor extends QueryExecutor {
 
     @Override
     public void dropCollection() {
-        
+
     }
 }
